--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
-RewriteCond %{REQUEST_URI}  !(\.png|\.jpg|\.gif|\.jpeg|\.webp|\.zip|\.css|\.svg|\.js|\.xml|\.txt|\.ttf)$
+RewriteCond %{REQUEST_URI}  !(\.png|\.jpg|\.gif|\.jpeg|\.webp|\.zip|\.css|\.svg|\.js|\.xml|\.txt|\.ttf|\.json)$
 RewriteRule (.*) routes.php [QSA,L]
